# ironic-staging-drivers

./: .coveragerc  .gitignore  .gitreview  .zuul.yaml  0001-Add-amt-driver.patch  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  driver-requirements.txt  extra-requirements.txt  lower-constraints.txt  pip_install  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
devstack/: enabled-drivers.txt  get_staging_entrypoints.py  plugin.sh
doc/source/: conf.py  drivers.rst  index.rst  releasenotes.rst
doc/source/drivers/: amt.rst  ansible.rst  iboot.rst  intel_nm.rst  libvirt.rst  wol.rst
imagebuild/dib-ironic-ansible/: README.rst  element-deps  package-installs.yaml  pkg-map
imagebuild/dib-ironic-ansible/install.d/: 60-ironic-callback-install  ironic-callback  ironic-callback.init  ironic-callback.service
imagebuild/dib-ironic-ansible/post-install.d/: 80-ironic-ansible
imagebuild/ironic-ansible/: README.rst  element-deps  package-installs.yaml
imagebuild/ironic-ansible/environment.d/: 95-ironic-ansible
imagebuild/ironic-ansible/finalise.d/: 98-cleanup
imagebuild/ironic-ansible/install.d/: ironic-callback.conf
imagebuild/ironic-ansible/post-install.d/: 81-ansible-host  81-ansible-ssh  82-ansible-syslog  syslog-setup.service  syslog-setup.sh
imagebuild/irsible/: .gitignore  Makefile  README.rst  build.sh  final.sh
imagebuild/irsible/build_files/: callback.py  finalreqs.lst  ironic-callback  requirements.txt
imagebuild/tinyipa-ansible/: .gitignore  Makefile  README.rst  install-deps.sh  prepare-devstack.sh  rebuild-tinyipa.sh  tinyipa-for-ansible.sh
ironic_staging_drivers/: __init__.py  agent.py  fake.py  intel_nmgr.py  pxe.py  version.py
ironic_staging_drivers/altamt/: altamt.py  client.py  common.py  drivers.py  management.py  power.py  wsman.py
ironic_staging_drivers/amt/: __init__.py  common.py  deploy.py  drivers.py  management.py  other-requirements.sh  power.py  python-requirements.txt
ironic_staging_drivers/amttool/: __init__.py  amttool.pl  amttool.py
ironic_staging_drivers/ansible/: __init__.py  ansible_libvirt.py  deploy.py  ironic_domain.py  python-requirements.txt  vendor.py
ironic_staging_drivers/ansible/playbooks/: README.rst  add-ironic-nodes.yaml  ansible.cfg  clean-v1.yaml  clean.yaml  clean_steps.yaml  clean_steps_lite.yaml  deploy-single-lvm.yaml  deploy-v1.yaml  deploy.yaml  inspect.yaml  shutdown.yaml
ironic_staging_drivers/ansible/playbooks/callback_plugins/: ironic_journald.py  ironic_log.ini  (+2 more)
ironic_staging_drivers/common/: exception.py  i18n.py  utils.py
ironic_staging_drivers/flat_standalone/: __init__.py
ironic_staging_drivers/iboot/: __init__.py  power.py
ironic_staging_drivers/intel_nm/: __init__.py  control_schema.json  get_cap_schema.json  ipmi.py  main_ids_schema.json  nm_commands.py  nm_vendor.py  policy_schema.json  statistics_schema.json  suspend_schema.json
ironic_staging_drivers/libvirt/: __init__.py  lib_virt.py  power.py  python-requirements.txt
ironic_staging_drivers/ovirt/: __init__.py  other-requirements.sh  ovirt.py  power.py  python-requirements.txt
ironic_staging_drivers/tests/unit/: test_foo.py  third_party_driver_mock_specs.py  third_party_driver_mocks.py
ironic_staging_drivers/wol/: __init__.py  power.py
playbooks/legacy/ironic-staging-drivers-dsvm-all-drivers/: run.yaml
playbooks/legacy/tempest-dsvm-ironic-staging-drivers-ansible-wholedisk/: run.yaml
releasenotes/notes/: add-amt-drover-a0b0307d62dae2a3.yaml  add-intel-nm-driver-3baf3fbc2aa14688.yaml  add-nm-statistics-methods-ddb803a9cf497f93.yaml  add-wol-driver-9d173b2ffc0dae0f.yaml  added-ovirt-driver-d0721503edba1518.yaml  ansible-change-api-510961a1132a2ced.yaml  ansible-deploy-63d94ae3857bf7d0.yaml  ansible-deploy-metrics-26bb80c3194d0bbd.yaml  ansible-driver-root-hints-f5ba5796f238e0a9.yaml  ansible-hctl-hint-8b80b54790251eb1.yaml  ansible-improved-partitions-4ffd7d913287f60f.yaml  ansible-journald-9a13cdd23f4a30ba.yaml  ansible-new-ironic-12e74f80cd72dbe3.yaml  ansible-oob-reboot-970b1358757aa08f.yaml  ansible-oslo-hints-3cf1c24c7949f279.yaml  classic-drivers-removal-cd39f4bf843a381c.yaml  deprecate-classic-drivers-7f8bacac9cb3fba2.yaml  hardware-types-e8e384faae3d50c3.yaml  intel-nm-boot-policy-fix-1d75c1b684ba5cda.yaml  libvirt_power_driver-ab73daee0feb555f.yaml  no-ssh-drivers-887d3b5f57bf5452.yaml  remove-agent-passthru-8d7955d77e1b877d.yaml  remove-ansible-deploy-03ecc823ea2aad9c.yaml
releasenotes/source/: conf.py  index.rst
tools/: list-package-entrypoints.py
zuul.d/: legacy-ironic-staging-drivers-jobs.yaml  project.yaml
(+74 files in other folders)
