[metadata]
name = ironic-staging-drivers
summary = A project used to hold out-of-tree ironic drivers
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://ironic-staging-drivers.rtfd.org
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    ironic_staging_drivers

[entry_points]
ironic.drivers =
    fake_wol_fake = ironic_staging_drivers.wol:FakeWakeOnLanFakeDriver
    pxe_wol_iscsi = ironic_staging_drivers.wol:PXEWakeOnLanISCSIDriver
    pxe_wol_agent = ironic_staging_drivers.wol:PXEWakeOnLanAgentDriver
    agent_ipmitool_nm = ironic_staging_drivers.intel_nm:AgentAndIPMIToolIntelNMDriver
    fake_nm = ironic_staging_drivers.intel_nm:FakeIntelNMDriver
    fake_amt_fake = ironic_staging_drivers.amt.drivers:FakeAMTFakeDriver
    pxe_amt_iscsi = ironic_staging_drivers.amt.drivers:PXEAndAMTISCSIDriver
    pxe_amt_agent = ironic_staging_drivers.amt.drivers:PXEAndAMTAgentDriver
    pxe_libvirt_agent = ironic_staging_drivers.libvirt:PXELibvirtAgentDriver
    pxe_libvirt_iscsi = ironic_staging_drivers.libvirt:PXELibvirtISCSIDriver
    fake_libvirt_fake = ironic_staging_drivers.libvirt:FakeLibvirtFakeDriver
    fake_iboot_fake = ironic_staging_drivers.iboot:FakeIBootFakeDriver
    pxe_iboot_iscsi = ironic_staging_drivers.iboot:PXEIBootISCSIDriver
    pxe_iboot_agent = ironic_staging_drivers.iboot:PXEIBootAgentDriver
    fake_ansible_fake = ironic_staging_drivers.ansible:FakeAnsibleDriver
    pxe_ssh_ansible = ironic_staging_drivers.ansible:AnsibleAndSSHDriver
    pxe_libvirt_ansible = ironic_staging_drivers.ansible:AnsibleAndLibvirtDriver
    pxe_ipmitool_ansible = ironic_staging_drivers.ansible:AnsibleAndIPMIToolDriver

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = ironic-staging-drivers/locale
domain = ironic-staging-drivers

[update_catalog]
domain = ironic-staging-drivers
output_dir = ironic-staging-drivers/locale
input_file = ironic-staging-drivers/locale/ironic-staging-drivers.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = ironic-staging-drivers/locale/ironic-staging-drivers.pot
